--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
     <nav>
         <div class="card-container">
-            <a href="/VISA/visa.html"><img src="./icons/passport.png" alt="">
+            <a href="/Tourbook/VISA/visa.html"><img src="./icons/passport.png" alt="">
             <h1>VISA</h1></a>
         </div>
         <div class="card-container">
