--- a/VISA/visa.html
+++ b/VISA/visa.html
@@ -17,7 +17,7 @@
     </header>
     <nav>
         <div class="card-container">
-            <a href="/Tourbook/UK/uk.html"><img src="/icons/united-kingdom.png" alt="">
+            <a href="/Tourbook/VISA/UK/uk.html"><img src="/icons/united-kingdom.png" alt="">
             <h1>UK</h1></a>
         </div>
         <div class="card-container">
