--- a/VISA/visa.html
+++ b/VISA/visa.html
@@ -4,48 +4,48 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="visa.css">
+    <link rel="stylesheet" href="/Tourbook/VISA/visa.css">
     <title>TourBook</title>
 </head>
 <body>
     <div class="header-nav">
-        <a href="/index.html"><img class="header-nav" src="/icons/arrow.png" alt="" height="32px" width="32px"></a>
-        <a href="/index.html"><img class="header-nav" src="/icons/home.png" alt="" height="32px" width="32px"></a>
+        <a href="/Tourbook/index.html"><img class="header-nav" src="/Tourbook/icons/arrow.png" alt="" height="32px" width="32px"></a>
+        <a href="/Tourbook/index.html"><img class="header-nav" src="/Tourbook/icons/home.png" alt="" height="32px" width="32px"></a>
     </div>
     <header>
         <h1>Navigation TourBook</h1>
     </header>
     <nav>
         <div class="card-container">
-            <a href="/Tourbook/VISA/UK/uk.html"><img src="/icons/united-kingdom.png" alt="">
+            <a href="/Tourbook/VISA/UK/uk.html"><img src="/Tourbook/icons/united-kingdom.png" alt="">
             <h1>UK</h1></a>
         </div>
         <div class="card-container">
-            <a href="/Tourbook/VISA/FRANCE/fr.html"><img src="/icons//france.png" alt="">
+            <a href="/Tourbook/VISA/FRANCE/fr.html"><img src="/Tourbook/icons//france.png" alt="">
             <h1>FRANCE</h1></a>
         </div>
         <div class="card-container">
-            <a href="/Tourbook/VISA/TURKEY/TK.html"><img src="/icons/turkey.png" alt="">
+            <a href="/Tourbook/VISA/TURKEY/TK.html"><img src="/Tourbook/icons/turkey.png" alt="">
             <h1>TURKEY</h1></a>
         </div>
         <div class="card-container">
-            <a href="/Tourbook/EGYPT/egy.html"><img src="/icons/egypt.png" alt="">
+            <a href="/Tourbook/EGYPT/egy.html"><img src="/Tourbook/icons/egypt.png" alt="">
             <h1>EGYPT</h1></a>
         </div>
         <div class="card-container">
-            <a href="/Tourbook/VISA/DUBAI/dubai.html"><img src="/icons/united-arab-emirates (1).png" alt="">
+            <a href="/Tourbook/VISA/DUBAI/dubai.html"><img src="/Tourbook/icons/united-arab-emirates (1).png" alt="">
             <h1>DUBAI</h1></a>
         </div>
         <div class="card-container">
-            <a href="/Tourbook/VISA/ITALY/it.html"><img src="/icons/italy.png" alt="">
+            <a href="/Tourbook/VISA/ITALY/it.html"><img src="/Tourbook/icons/italy.png" alt="">
             <h1>ITALY</h1></a>
         </div>
         <div class="card-container">
-            <a href="/Tourbook/VISA/CANADA/ca.html"><img src="/icons/canada.png" alt="">
+            <a href="/Tourbook/VISA/CANADA/ca.html"><img src="/Tourbook/icons/canada.png" alt="">
             <h1>CANADA</h1></a>
         </div>
         <div class="card-container">
-            <a href="/Tourbook/VISA/SPAIN/sp.html"><img src="/icons/spain.png" alt="">
+            <a href="/Tourbook/VISA/SPAIN/sp.html"><img src="/Tourbook/icons/spain.png" alt="">
             <h1>SPAIN</h1></a>
         </div>
     </nav>
