--- a/VISA/USA/usa.html
+++ b/VISA/USA/usa.html
@@ -15,18 +15,20 @@
     <div class="content-container">
         <div class="content left">
             <div class="left-title">
-                <h1>UK</h1>
+                <h1>USA</h1>
                 <span></span>
             </div>
             <div class="left-content">
-                <ul>
-                    <li class="print-no-show"><a href="https://visas-immigration.service.gov.uk/alt-language-selection-skip-visa" target="_blank">Formulaire</a></li>
+                <ul><li class="print-no-show"><a href="https://ustraveldocs.com/dz/" target="_blank">Documentation</a></li>
+                    <li class="print-no-show"><a href="https://ceac.state.gov/GenNIV/General/complete/complete_personal.aspx?node=Personal1" target="_blank">Formulaire 1: DS-160</a></li>
+                    <li class="print-no-show"><a href="https://cgifederal.secure.force.com/ApplicantHome" target="_blank">Formulaire 2</a></li>
                     <li><h3>Documents</h3></li>
-                    <li class="dot-list">Formulaire <span class="price">2000 DA</span></li>
+                    <li class="dot-list">Formulaires <span class="price">3000 DA</span></li>
                     <li class="dot-list">Hébergement/Réservation d'Hotel <span class="price">3000 DA</span></li>
                     <li class="dot-list">Assurance de Voyage <span class="price">Depend de la durée</span></li>
                     <li class="dot-list">Telex <span class="price">500 DA</span></li>
-                    <li class="dot-list">Relevé compte bancaire (Euro/Dinar)</li>
+                    <li class="dot-list">Relevé compte bancaire (Dollar/Dinar)</li>
+                    <li class="dot-list">Photo Visa USA 5x5 (Digital & Physique)</li>
                     <div id="tourist">
                         <li><h5>Touristique</h5></li>
                         <li class="dot-list"><span class="client-type">S </span>3 Dernieres fiches de paie</li>
@@ -65,14 +67,18 @@
             <div class="print-no-show">
                 <h3>Etapes</h3>
             <ul>
+                <li class="dot-list"><strong>Tout doit etre ecris en anglais</strong></li>
                 <li class="dot-list">Creer un dossier</li>
-                <li class="dot-list">Prendre un rendez-vous</li>
-                <li class="dot-list">Client paie TLS</li>
+                <li class="dot-list"><a href="https://ceac.state.gov/GenNIV/General/complete/complete_personal.aspx?node=Personal1" target="_blank">Remplir le DS-160</a></li>
+                <li class="dot-list"><a href="https://cgifederal.secure.force.com/ApplicantHome" target="_blank">Remplir le deuxiemme formulaire</a></li>
+                <li class="dot-list">Prendre RDV</li>
+                <li class="dot-list">Client paie Aramex</li>
+                <li class="dot-list">Client se pointe au consulat pour interview</li>
             </ul>
             </div>
             <div class="frais">
                 <h3>Frais de VISA</h3>
-                <h5 class="price">26,000 DA</h5>
+                <h5 class="price">23,200 DA</h5>
             </div>
         </div>
     </div>
