--- a/VISA/visa.html
+++ b/VISA/visa.html
@@ -9,43 +9,43 @@
 </head>
 <body>
     <div class="header-nav">
-        <a href="/index.html"><img class="header-nav" src="/icons/arrow.png" alt="" height="32px" width="32px"></a>
-        <a href="/index.html"><img class="header-nav" src="/icons/home.png" alt="" height="32px" width="32px"></a>
+        <a href="/index.html"><img class="header-nav" src="/Tourbook/icons/arrow.png" alt="" height="32px" width="32px"></a>
+        <a href="/index.html"><img class="header-nav" src="/Tourbook/icons/home.png" alt="" height="32px" width="32px"></a>
     </div>
     <header>
         <h1>Navigation TourBook</h1>
     </header>
     <nav>
         <div class="card-container">
-            <a href="./UK/uk.html"><img src="/icons/united-kingdom.png" alt="">
+            <a href="/Tourbook/VISA/UK/uk.html"><img src="/icons/united-kingdom.png" alt="">
             <h1>UK</h1></a>
         </div>
         <div class="card-container">
-            <a href="/VISA/FRANCE/fr.html"><img src="/icons//france.png" alt="">
+            <a href="/Tourbook/VISA/FRANCE/fr.html"><img src="/icons//france.png" alt="">
             <h1>FRANCE</h1></a>
         </div>
         <div class="card-container">
-            <a href="/VISA/TURKEY/TK.html"><img src="/icons/turkey.png" alt="">
+            <a href="/Tourbook/VISA/TURKEY/TK.html"><img src="/icons/turkey.png" alt="">
             <h1>TURKEY</h1></a>
         </div>
         <div class="card-container">
-            <a href="./EGYPT/egy.html"><img src="/icons/egypt.png" alt="">
+            <a href="/Tourbook/VISA/EGYPT/egy.html"><img src="/icons/egypt.png" alt="">
             <h1>EGYPT</h1></a>
         </div>
         <div class="card-container">
-            <a href="/VISA/DUBAI/dubai.html"><img src="/icons/united-arab-emirates (1).png" alt="">
+            <a href="/Tourbook/VISA/DUBAI/dubai.html"><img src="/icons/united-arab-emirates (1).png" alt="">
             <h1>DUBAI</h1></a>
         </div>
         <div class="card-container">
-            <a href="/VISA/USA/usa.html"><img src="/icons/usa.png" alt="">
+            <a href="/Tourbook/VISA/USA/usa.html"><img src="/icons/usa.png" alt="">
             <h1>USA</h1></a>
         </div>
         <div class="card-container">
-            <a href="/VISA/CANADA/ca.html"><img src="/icons/canada.png" alt="">
+            <a href="/Tourbook/VISA/CANADA/ca.html"><img src="/icons/canada.png" alt="">
             <h1>CANADA</h1></a>
         </div>
         <div class="card-container">
-            <a href="/VISA/SPAIN/sp.html"><img src="/icons/spain.png" alt="">
+            <a href="/Tourbook/VISA/SPAIN/sp.html"><img src="/icons/spain.png" alt="">
             <h1>SPAIN</h1></a>
         </div>
     </nav>
