--- a/VISA/visa.html
+++ b/VISA/visa.html
@@ -17,35 +17,35 @@
     </header>
     <nav>
         <div class="card-container">
-            <a href="/Tourbook/VISA/UK/uk.html"><img src="/icons/united-kingdom.png" alt="">
+            <a href="/Tourbook/VISA/UK/uk.html"><img src="/Tourbook/icons/united-kingdom.png" alt="">
             <h1>UK</h1></a>
         </div>
         <div class="card-container">
-            <a href="/Tourbook/VISA/FRANCE/fr.html"><img src="/icons//france.png" alt="">
+            <a href="/Tourbook/VISA/FRANCE/fr.html"><img src="/Tourbook/icons/france.png" alt="">
             <h1>FRANCE</h1></a>
         </div>
         <div class="card-container">
-            <a href="/Tourbook/VISA/TURKEY/TK.html"><img src="/icons/turkey.png" alt="">
+            <a href="/Tourbook/VISA/TURKEY/TK.html"><img src="/Tourbook/icons/turkey.png" alt="">
             <h1>TURKEY</h1></a>
         </div>
         <div class="card-container">
-            <a href="/Tourbook/VISA/EGYPT/egy.html"><img src="/icons/egypt.png" alt="">
+            <a href="/Tourbook/VISA/EGYPT/egy.html"><img src="/Tourbook/icons/egypt.png" alt="">
             <h1>EGYPT</h1></a>
         </div>
         <div class="card-container">
-            <a href="/Tourbook/VISA/DUBAI/dubai.html"><img src="/icons/united-arab-emirates (1).png" alt="">
+            <a href="/Tourbook/VISA/DUBAI/dubai.html"><img src="/Tourbook/icons/united-arab-emirates (1).png" alt="">
             <h1>DUBAI</h1></a>
         </div>
         <div class="card-container">
-            <a href="/Tourbook/VISA/USA/usa.html"><img src="/icons/usa.png" alt="">
+            <a href="/Tourbook/VISA/USA/usa.html"><img src="/Tourbook/icons/usa.png" alt="">
             <h1>USA</h1></a>
         </div>
         <div class="card-container">
-            <a href="/Tourbook/VISA/CANADA/ca.html"><img src="/icons/canada.png" alt="">
+            <a href="/Tourbook/VISA/CANADA/ca.html"><img src="/Tourbook/icons/canada.png" alt="">
             <h1>CANADA</h1></a>
         </div>
         <div class="card-container">
-            <a href="/Tourbook/VISA/SPAIN/sp.html"><img src="/icons/spain.png" alt="">
+            <a href="/Tourbook/VISA/SPAIN/sp.html"><img src="/Tourbook/icons/spain.png" alt="">
             <h1>SPAIN</h1></a>
         </div>
     </nav>
