--- a/VISA/USA/usa.html
+++ b/VISA/USA/usa.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/VISA/FRANCE/fr.css">
+    <link rel="stylesheet" href="/Tourbook/VISA/USA/usa.css">
     <title>TourBook</title>
 </head>
 <body>
     <div class="header-nav print-no-show">
-        <a href="/VISA/visa.html"><img class="header-nav" src="/icons/arrow.png" alt="" height="32px" width="32px"></a>
-        <a href="/index.html"><img class="header-nav" src="/icons/home.png" alt="" height="32px" width="32px"></a>
+        <a href="/Tourbook/VISA/visa.html"><img class="header-nav" src="/Tourbook/icons/arrow.png" alt="" height="32px" width="32px"></a>
+        <a href="/Tourbook/index.html"><img class="header-nav" src="/Tourbook/icons/home.png" alt="" height="32px" width="32px"></a>
     </div>
     <div class="content-container">
         <div class="content left">
