--- a/VISA/FRANCE/fr.html
+++ b/VISA/FRANCE/fr.html
@@ -79,21 +79,21 @@
     <div class="buttons-container print-no-show">
         <div class="buttons">
             <button onclick="touristiqueCall()">Touristique</button>
-            <img id="print1" src="/icons/printer.png" alt="">
+            <img id="print1" src="/Tourbook/icons/printer.png" alt="">
         </div>
         <div class="buttons">
             <button onclick="affaireCall()">Affaire</button>
-            <img id="print2" src="/icons/printer.png" alt="">
+            <img id="print2" src="/Tourbook/icons/printer.png" alt="">
         </div>
         <div class="buttons">
             <button onclick="medicalCall()">Medicale</button>
-            <img id="print3" src="/icons/printer.png" alt="">
+            <img id="print3" src="/Tourbook/icons/printer.png" alt="">
         </div>
         <div class="buttons">
             <button onclick="etudeCall()">Etude</button>
-            <img id="print4" src="/icons/printer.png" alt="">
+            <img id="print4" src="/Tourbook/icons/printer.png" alt="">
         </div>
     </div>
-    <script src="/VISA/visa.js"></script>
+    <script src="/Tourbook/VISA/visa.js"></script>
 </body>
 </html>
