--- a/VISA/USA/usa.html
+++ b/VISA/USA/usa.html
@@ -100,6 +100,6 @@
             <img id="print4" src="/Tourbook/icons/printer.png" alt="">
         </div>
     </div>
-    <script src="/VISA/visa.js"></script>
+    <script src="/Tourbook/VISA/visa.js"></script>
 </body>
 </html>
