--- a/VISA/UK/uk.html
+++ b/VISA/UK/uk.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/VISA/FRANCE/fr.css">
+    <link rel="stylesheet" href="/Tourbook/VISA/UK/uk.css">
     <title>TourBook</title>
 </head>
 <body>
     <div class="header-nav print-no-show">
-        <a href="/VISA/visa.html"><img class="header-nav" src="/icons/arrow.png" alt="" height="32px" width="32px"></a>
-        <a href="/index.html"><img class="header-nav" src="/icons/home.png" alt="" height="32px" width="32px"></a>
+        <a href="/Tourbook/VISA/visa.html"><img class="header-nav" src="/Tourbook/icons/arrow.png" alt="" height="32px" width="32px"></a>
+        <a href="/Tourbook/index.html"><img class="header-nav" src="/Tourbook/icons/home.png" alt="" height="32px" width="32px"></a>
     </div>
     <div class="content-container">
         <div class="content left">
@@ -79,21 +79,21 @@
     <div class="buttons-container print-no-show">
         <div class="buttons">
             <button onclick="touristiqueCall()">Touristique</button>
-            <img id="print1" src="/icons/printer.png" alt="">
+            <img id="print1" src="/Tourbook/icons/printer.png" alt="">
         </div>
         <div class="buttons">
             <button onclick="affaireCall()">Affaire</button>
-            <img id="print2" src="/icons/printer.png" alt="">
+            <img id="print2" src="/Tourbook/icons/printer.png" alt="">
         </div>
         <div class="buttons">
             <button onclick="medicalCall()">Medicale</button>
-            <img id="print3" src="/icons/printer.png" alt="">
+            <img id="print3" src="/Tourbook/icons/printer.png" alt="">
         </div>
         <div class="buttons">
             <button onclick="etudeCall()">Etude</button>
-            <img id="print4" src="/icons/printer.png" alt="">
+            <img id="print4" src="/Tourbook/icons/printer.png" alt="">
         </div>
     </div>
-    <script src="/VISA/visa.js"></script>
+    <script src="/Tourbook/VISA/visa.js"></script>
 </body>
 </html>
